# zeth

./: .gitignore  Cargo.toml
bin-powdr/: Cargo.toml  out.txt
bin-powdr/src/: main.rs
guest-powdr/: Cargo.toml
guest-powdr-std/: Cargo.toml
guest-powdr-std/src/: lib.rs
guest-powdr/src/: lib.rs  main.rs
guests/eth-block/src/: main.rs
guests/op-block/: Cargo.toml
guests/op-derive/: Cargo.toml
host/src/: main.rs
host/tests/: cmd.rs
lib/: Cargo.toml
lib/src/: consts.rs  input.rs  lib.rs  mem_db.rs  utils.rs
lib/src/builder/: finalize.rs  initialize.rs  mod.rs
lib/src/builder/execute/: ethereum.rs  mod.rs  optimism.rs  taiko.rs
lib/src/host/: preflight.rs
lib/src/host/provider/: cached_rpc_provider.rs  file_provider.rs  mod.rs  rpc_provider.rs
lib/src/optimism/: batcher.rs  batcher_channel.rs  batcher_db.rs  deposits.rs  mod.rs
lib/src/taiko/: host.rs  mod.rs  protocol_instance.rs  provider.rs
primitives/: Cargo.toml
primitives/src/: access_list.rs  batch.rs  lib.rs  receipt.rs  revm.rs
primitives/src/transactions/: ethereum.rs
primitives/src/trie/: mpt.rs
raiko-drivers/common/: Cargo.toml
raiko-drivers/common/src/: lib.rs
raiko-drivers/powdr/: Cargo.toml
raiko-drivers/powdr/src/: lib.rs
raiko-guests/powdr/: Cargo.toml  build_guest.sh
raiko-guests/powdr/artifact/: Cargo.toml
raiko-guests/powdr/artifact/src/: main.rs
raiko-guests/powdr/common/src/: lib.rs
raiko-guests/powdr/runtime/: Cargo.toml
raiko-guests/powdr/runtime/src/: main.rs
raiko-guests/powdr/src/: main.rs
raiko-guests/sgx/src/: main.rs  one_shot.rs
raiko-guests/succinct/src/: main.rs
raiko-host/: Cargo.toml
raiko-host/src/prover/: execution.rs  prepare_input.rs  request.rs
raiko-host/src/prover/proof/: mod.rs  powdr.rs  sgx.rs
