[workspace]
resolver = "2"
members = [
    "guests",
    "bin-powdr",
    "guest-powdr-std",
    # "host",
    "lib",
    "primitives",
    "testing/ef-tests"
]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[workspace.dependencies]
bonsai-sdk = "0.5"
hashbrown = { version = "0.14", features = ["inline-more"] }
risc0-build = "0.19"
risc0-zkvm = { version = "0.19", default-features = false }
revm = { git = "https://github.com/powdr-labs/revm", branch = "serde-no-std", default-features = false, features = [ "serde" ] }
revm-primitives = { git = "https://github.com/powdr-labs/revm.git", branch = "serde-no-std", package = "revm-primitives", default-features = false, features = [ "serde" ]}
