[package]
name = "guest-powdr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# powdr = { git = "https://github.com/powdr-labs/powdr", branch = "continuations-data-input" }
zeth-lib = { path = "../lib", default-features = false }
zeth-primitives = { path = "../primitives", features = ["revm"] }
revm = { git = "https://github.com/powdr-labs/revm", branch = "serde-no-std", default-features = false, features = [ "serde" ] }
ruint = { version = "1.10", default-features = false }

[workspace]