[package]
name = "zeth-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.5.4", default-features = false, features = ["rlp", "serde"]}
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }

anyhow = { version = "1.0", default-features = false }
bytes = { version = "1.1", default-features = false }

# ethers-core = { version = "2.0", optional = true, features = ["optimism"] }

k256 = { version = "=0.13.2", features = ["ecdsa"], default_features = false }

revm-primitives = { workspace = true, optional = true }
rlp = {version = "0.5.2", default_features = false}
serde = { version = "1.0", default-features = false, features = ["alloc"] }
sha3 = {version = "0.10", default_features = false}
# thiserror = "1.0"

[dev-dependencies]
bincode = "1.3"
hex-literal = "0.4"
serde_json = "1.0"

[features]
# ethers = ["dep:ethers-core"]
revm = ["dep:revm-primitives"]
