[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artifact = { version = "0.1.0", path = "../artifact" }
powdr = { git = "https://github.com/ceciliaz030/powdr", branch = "+nightly", version = "0.1.0-alpha.1" }
