[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "runtime"
path = "src/bin/main.rs"

[[bin]]
name = "builder"
path = "src/bin/builder.rs"

[dependencies]
common = { version = "0.1.0", path = "../common" }
powdr = { git = "https://github.com/ceciliaz030/powdr", branch = "+nightly", version = "0.1.0-alpha.1" }
